Long to UUID for users, removed unnecessary endpoints